--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,18 @@ uvicorn==0.35.0
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
-# PostgreSQL 드라이버 추가
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-alembic==1.13.1
+
+# MongoDB 관련 패키지
+motor==3.3.2
+pymongo==4.6.1
+beanie==1.24.0
+
+# OAuth2 및 JWT 관련 패키지
+authlib==1.2.1
+itsdangerous==2.1.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+httpx==0.25.2
+
+# 설정 관리
+pydantic-settings==2.1.0
