--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,9 @@ pydantic-settings==2.1.0
 # 인증
 PyJWT==2.10.1
 email-validator==2.2.0
+
+# Socket.IO
+python-socketio==5.13.0
+
+# 암호화
+cryptography==41.0.8
