--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,5 @@ jobs:
         script: |
           cd /home/${{ secrets.USERNAME }}/startup-trpg-backend
           git pull origin main
+          chmod +x deploy.sh
           ./deploy.sh
